--- a/Osaca.Web/App_GlobalResources/AdminResources-ar.resx
+++ b/Osaca.Web/App_GlobalResources/AdminResources-ar.resx
@@ -181,7 +181,7 @@
     <value>رسالة من صديقك {0}.</value>
   </data>
   <data name="SiteName" xml:space="preserve">
-    <value>OSAKA Cargo</value>
+    <value>Country Sea Cargo</value>
   </data>
   <data name="SitePath" xml:space="preserve">
     <value>http://taj-it.com</value>
