--- a/Osaca.Web/App_GlobalResources/Resource-ar.resx
+++ b/Osaca.Web/App_GlobalResources/Resource-ar.resx
@@ -187,7 +187,7 @@
     <value>رسالة من صديقك {0}.</value>
   </data>
   <data name="SiteName" xml:space="preserve">
-    <value>OSAKA CARGO</value>
+    <value>Country Sea</value>
   </data>
   <data name="SuccessDelete" xml:space="preserve">
     <value>Data deleted successfully.</value>
